<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/guideline2">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:background="@drawable/input_shape"
        android:drawableEnd="@drawable/ic_outline_email_24"
        android:elevation="3dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/enter_email"
        android:padding="@dimen/_18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/input_shape"
        android:drawableEnd="@drawable/ic_baseline_lock_open_24"
        android:elevation="5dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:padding="@dimen/_18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="@dimen/_117dp"
        android:layout_height="@dimen/_119dp"
        android:elevation="@dimen/_10dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="#AEE7EAE9"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="@dimen/_100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:trackColor="#8B36FFC6"
        app:trackThickness="@dimen/_8dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Register"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/_10dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_already_registered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/already_registered"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/login_here"
        android:textColor="#FF0000"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_already_registered"
        app:layout_constraintStart_toStartOf="@+id/tv_already_registered" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>